[tool.poetry]
name = "manager-bot"
version = "0.0.1"
description = "Administration and management of chats and channels in telegram."
authors = ["Kirill Lapushinskiy <kirill@lapushinskiy.ru>", "Nikita Novikov <sqqvt1@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
